Archive2/a3/96996401492e0a/output
main.cpp: In function 'int main()':
main.cpp:58:11: error: invalid use of template-name 'MC' without an argument list
 using mO= MC mymc<double >;
           ^
